kubernetes/gcp-gke/overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "moodle-static-ip"
    networking.gke.io/managed-certificates: "moodle-managed-cert"
spec:
  ingressClassName: "gke-l7-gxlb"
  rules:
  - host: bordercolliechronicles.ca
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: moodle-nginx-service
            port:
              number: 80
